--- a/style.css
+++ b/style.css
@@ -1,14 +1,89 @@
-html {
-	color: rgba(255, 255, 255	, 0.5);
-	background-color: rgba(0, 130, 110, 0.5);
-
+#headerpic {
+	width: 96%;
+	position: absolute;
+	height: 500px;
+	right: 2%;
+	left: 2%;
+	top: 2%;
+	box-shadow: 1px 4px 1px 1px rgba(106, 112, 132, 0.5);
 }
 
-img {
-	border-radius: 100%;
+.topnavbar {
+	position: absolute;
+	float: right;
+	right: 4%;
+	top: 4%;
+	text-transform: uppercase;
+
+	
+}
+
+#topnavid {
+	text-decoration: none;
+	color: #ffffff;
+	margin-right: 10px;
+}
+
+.navbar {
+	background: white;
+	position: absolute;
+	top: 8%;
+	opacity: 0.7;
 	width: 100%;
+	color: #1a43bf;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	list-style-type: none;
+	padding-left: 20%;
+
+
+
 }
 
-h1 {
+ul {
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+
+li {
+	float: left;
+	padding-right: 17px;
+	display: inline-block;
+	font-size: 24px;
+	color: #ffffff;
+	text-decoration: none;	
 	text-align: center;
+}
+
+a:hover {
+	color: #ffffff;
+	font-size: 24px;
+	text-decoration: none;
+	border-left: 3px solid #1a43bf;
+	border-radius: 20%;
+	border-right: 2px solid #1a43bf;
+	background: #1a43bf;
+	
+
+}
+
+a {
+	text-decoration: none;
+	padding-right: 17px;
+	padding-left: 17px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-family: 'Asap Condensed', sans-serif;
+
+}
+
+#heading {
+	position: absolute;
+	top: 30%;
+	left: 10%;
+	color: #ffffff;
+	font-size: 150px;
+	font-family: 'Indie flower', cursive;
 }
