--- a/style.css
+++ b/style.css
@@ -1,11 +1,32 @@
 #headerpic {
-	width: 96%;
-	position: absolute;
-	height: 500px;
-	right: 2%;
-	left: 2%;
+	width: 100%;
+	position: relative;
+	height: 80%;
+	right: 0%;
+	left: 0%;
 	top: 2%;
 	box-shadow: 1px 4px 1px 1px rgba(106, 112, 132, 0.5);
+	max-height: 500px;
+}
+
+#topnavid {
+	text-decoration: none;
+	font-family: "Asap Condensed", sans-serif;
+	color: white;
+	font-size: 20px;
+	word-spacing: 5px;
+	border-bottom: 2px solid white;
+	margin-right: 25px;
+	float: right;
+	padding: 5px;
+
+}
+
+#topnavid:hover {
+	background: white;
+	color: black;
+	opacity: 0.5;
+	padding: 5px;
 }
 
 .topnavbar {
@@ -14,76 +35,220 @@
 	right: 4%;
 	top: 4%;
 	text-transform: uppercase;
+	float: right;
+
 
 	
 }
 
-#topnavid {
-	text-decoration: none;
-	color: #ffffff;
-	margin-right: 10px;
-}
 
-.navbar {
-	background: white;
-	position: absolute;
-	top: 8%;
-	opacity: 0.7;
-	width: 100%;
-	color: #1a43bf;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	list-style-type: none;
-	padding-left: 20%;
+.topnav {
+    background-color: #ffffff;
+    opacity: 0.7;
+    overflow: hidden;
+    position: absolute;
+    top: 10%;
+    color: blue;
+    width: 100%;
 
 
 
 }
 
-ul {
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: inline;
+.topnav a {
+    float: left;
+    display: block;
+    color: blue;
+    text-align: center;
+    padding: 34px 36px;
+    text-decoration: none;
+    font-size: 27px;
+    font-family: 'Asap Condensed', sans-serif;
 }
 
-li {
-	float: left;
-	padding-right: 17px;
-	display: inline-block;
-	font-size: 24px;
-	color: #ffffff;
-	text-decoration: none;	
-	text-align: center;
-}
-
-a:hover {
-	color: #ffffff;
-	font-size: 24px;
-	text-decoration: none;
-	border-left: 3px solid #1a43bf;
-	border-radius: 20%;
-	border-right: 2px solid #1a43bf;
-	background: #1a43bf;
-	
-
-}
-
-a {
-	text-decoration: none;
-	padding-right: 17px;
-	padding-left: 17px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+.topnav a:hover {
+    background-color: #4566cc;
+    color: white;
 	font-family: 'Asap Condensed', sans-serif;
 
 }
+
+.topnav .icon {
+    display: none;
+}
+
 
 #heading {
 	position: absolute;
 	top: 30%;
 	left: 10%;
 	color: #ffffff;
-	font-size: 150px;
+	font-size: 100px;
 	font-family: 'Indie flower', cursive;
+	opacity: 0.8;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+#text {
+	position: relative;
+	left: 20%;
+	font-family: "Asap Condensed", sans-serif;
+	margin-right: 60%;
+	display: inline-block;
+	background: #c9d1e8;
+	padding: 15px;
+	opacity: 0.7;
+
+
+}
+
+h2 {
+	margin-top: 5%;
+	position: relative;
+	left: 20%;
+	font-family: "Asap Condensed", sans-serif;
+	background: #6c789b;
+	display: inline-block;
+	padding: 5px;
+	color: white;
+}
+
+h3 {
+	margin-top: 5%;
+	position: relative;
+	left: 20%;
+	font-family: "Asap Condensed", sans-serif;
+	background: #6c789b;
+	display: inline-block;
+	padding: 4px;
+	color: white;
+}
+
+#woman {
+	position: absolute;
+	top: 140%;
+	right: 12%;
+	max-height: 700px;
+	max-width: 350px;
+	margin-top: 5px;
+	margin-left: 10px;
+	margin-bottom: 5%;
+}
+#baldmen {
+	position: absolute;
+	top: 140%;
+	right: 12%;
+	max-height: 700px;
+	max-width: 350px;
+	margin-top: 5px;
+	margin-left: 10px;
+	margin-bottom: 5%;	
+}
+
+#happywoman {
+	position: absolute;
+	top: 140%;
+	right: 12%;
+	max-height: 700px;
+	max-width: 350px;
+	margin-top: 5px;
+	margin-left: 10px;
+	margin-bottom: 5%;
+}
+
+#womanwoman {
+	position: absolute;
+	top: 140%;
+	right: 12%;
+	max-height: 700px;
+	max-width: 350px;
+	margin-top: 5px;
+	margin-left: 10px;
+	margin-bottom: 5%;
+}
+
+
+
+.background {
+	background-image: url("https://dcrazed.com/wp-content/uploads/2014/03/White-map-Background.jpg");
+	background-attachment: fixed;
+	}
+
+.boogieman {
+	background: black;
+	color: white;
+	font-family: "Asap Condensed", sans-serif;
+	font-size: 12px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	margin-top: 10px;
+	text-align: center;
+	opacity: 0.8;
+}
+
+#lastimg {
+	margin-right: 1%;
+	margin-left: 0%;
+	max-width: 1600px;
+	width: 100%;
+}
+
+#contactnav {
+	color: #a5154c;
+}
+
+#contactnav:hover {
+	color: white;
+	background: #a5154c;
+}
+
+#aboutbar {
+	color: #382b30;
+}
+
+#aboutbar:hover {
+	color: white;
+	background: #382b30;
+}
+
+#agentbar {
+	color: #7160f7;
+}
+
+#agentbar:hover {
+	color: white;
+	background: #7160f7;
+}
+
+#aboutheader2 {
+	background:  #382b30;
+	opacity: 0.8;
+	padding: 10px;
+}
+
+#aboutheader3 {
+	background:  #382b30;
+	opacity: 0.8;
+	padding: 10px;
 }
