--- a/style.css
+++ b/style.css
@@ -1,254 +1,159 @@
 #headerpic {
 	width: 100%;
+	height: 500px;
+}
+
+#container {
 	position: relative;
-	height: 80%;
-	right: 0%;
-	left: 0%;
-	top: 2%;
-	box-shadow: 1px 4px 1px 1px rgba(106, 112, 132, 0.5);
-	max-height: 500px;
+	
 }
 
-#topnavid {
-	text-decoration: none;
-	font-family: "Asap Condensed", sans-serif;
-	color: white;
-	font-size: 20px;
-	word-spacing: 5px;
-	border-bottom: 2px solid white;
-	margin-right: 25px;
-	float: right;
-	padding: 5px;
-
-}
-
-#topnavid:hover {
-	background: white;
-	color: black;
-	opacity: 0.5;
-	padding: 5px;
-}
-
-.topnavbar {
+#navbar1 {
 	position: absolute;
-	float: right;
-	right: 4%;
-	top: 4%;
-	text-transform: uppercase;
-	float: right;
+	top: 20px;
+	right: 20px;
+	font-family: "Asap Condensed"
 
+}
+
+#topnavlink {
+	text-decoration: none;
+	margin-right: 30px;
+	color: white;
+	text-decoration: underline;
+	font-size: 20px;
+
+}
+
+#topnavlink:hover {
+	text-decoration: none;
+	color: yellow;
+}
+
+#navbar2 {
+	position: absolute;
+	top: 70px;
+	left: 40px;
+	background: white;
+	padding: 50px;
+	width: 100%;
+	opacity: 0.6;
+	font-family: "Asap Condensed";
 
 	
 }
 
+#navlink {
+	background: white;
+	color: #54a6ff;
+	text-decoration: none;
+	padding: 50px;
+	font-size: 25px;
+	transition: 1s ease all;
+}
 
-.topnav {
-    background-color: #ffffff;
-    opacity: 0.7;
-    overflow: hidden;
-    position: absolute;
-    top: 10%;
-    color: blue;
-    width: 100%;
+#navlink:hover {
+	background: #54a6ff;
+	color: white;
+	transition: 1s ease all;
+}
 
+#navlink2 {
+	color: #9320db;
+	background: white;
+	text-decoration: none;
+	padding: 50px;
+	font-size: 25px;
+}
+
+#navlink2:hover {
+	background: #9320db;
+	color: white;
+	transition: 1s ease all;
+}
+
+#navlink3 {
+	color: #7a3742;
+	background: white;
+	text-decoration: none;
+	padding: 50px;
+	font-size: 25px;
+}
+
+#navlink3:hover {
+	background: #7a3742;
+	color: white;
+	transition: 1s ease all;
 
 
 }
 
-.topnav a {
-    float: left;
-    display: block;
-    color: blue;
-    text-align: center;
-    padding: 34px 36px;
-    text-decoration: none;
-    font-size: 27px;
-    font-family: 'Asap Condensed', sans-serif;
+#navlink4 {
+	color: #b7662c;
+	background: white;
+	text-decoration: none;
+	padding: 50px;
+	font-size: 25px;
 }
 
-.topnav a:hover {
-    background-color: #4566cc;
-    color: white;
-	font-family: 'Asap Condensed', sans-serif;
+#navlink4:hover {
+	background: #b7662c;
+	color: white;
+	transition: 1s ease all;
+
 
 }
-
-.topnav .icon {
-    display: none;
-}
-
 
 #heading {
 	position: absolute;
-	top: 30%;
-	left: 10%;
-	color: #ffffff;
-	font-size: 100px;
-	font-family: 'Indie flower', cursive;
-	opacity: 0.8;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-#text {
-	position: relative;
-	left: 20%;
-	font-family: "Asap Condensed", sans-serif;
-	margin-right: 60%;
-	display: inline-block;
-	background: #c9d1e8;
-	padding: 15px;
+	top: 250px;
+	left: 100px;
+	font-size: 80px;
+	font-family: "Indie Flower";
+	color: white;
 	opacity: 0.7;
+}
 
+/* FIRST BLOCKs END */
+
+#mainpart {
+	background-image: url("background.png");
+	background-attachment: fixed;
 
 }
 
-h2 {
-	margin-top: 5%;
+#textpart {
 	position: relative;
-	left: 20%;
-	font-family: "Asap Condensed", sans-serif;
-	background: #6c789b;
-	display: inline-block;
-	padding: 5px;
-	color: white;
-}
-
-h3 {
-	margin-top: 5%;
-	position: relative;
-	left: 20%;
-	font-family: "Asap Condensed", sans-serif;
-	background: #6c789b;
-	display: inline-block;
-	padding: 4px;
-	color: white;
 }
 
 #woman {
 	position: absolute;
-	top: 140%;
-	right: 12%;
-	max-height: 700px;
-	max-width: 350px;
-	margin-top: 5px;
-	margin-left: 10px;
-	margin-bottom: 5%;
-}
-#baldmen {
-	position: absolute;
-	top: 140%;
-	right: 12%;
-	max-height: 700px;
-	max-width: 350px;
-	margin-top: 5px;
-	margin-left: 10px;
-	margin-bottom: 5%;	
+	right: 5%;
+	top: 20%;
+	z-index: 1;
+
 }
 
-#happywoman {
-	position: absolute;
-	top: 140%;
-	right: 12%;
-	max-height: 700px;
-	max-width: 350px;
-	margin-top: 5px;
-	margin-left: 10px;
-	margin-bottom: 5%;
+#text {
+	padding: 20px;
+	margin-right: 30%;
+	margin-left: 10%;
+	font-family: "Asap Condensed";
+	
 }
 
-#womanwoman {
-	position: absolute;
-	top: 140%;
-	right: 12%;
-	max-height: 700px;
-	max-width: 350px;
-	margin-top: 5px;
-	margin-left: 10px;
-	margin-bottom: 5%;
-}
-
-
-
-.background {
-	background-image: url("https://dcrazed.com/wp-content/uploads/2014/03/White-map-Background.jpg");
-	background-attachment: fixed;
-	}
-
-.boogieman {
-	background: black;
+h2, h3 {
+	margin-left: 25%;
+	margin-right: 40%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-family: "Asap Condensed";
 	color: white;
-	font-family: "Asap Condensed", sans-serif;
-	font-size: 12px;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	margin-top: 10px;
-	text-align: center;
+	background: #54a6ff;
+	display: inline-block;
+	border-radius: 25px;
 	opacity: 0.8;
 }
 
-#lastimg {
-	margin-right: 1%;
-	margin-left: 0%;
-	max-width: 1600px;
-	width: 100%;
-}
-
-#contactnav {
-	color: #a5154c;
-}
-
-#contactnav:hover {
-	color: white;
-	background: #a5154c;
-}
-
-#aboutbar {
-	color: #382b30;
-}
-
-#aboutbar:hover {
-	color: white;
-	background: #382b30;
-}
-
-#agentbar {
-	color: #7160f7;
-}
-
-#agentbar:hover {
-	color: white;
-	background: #7160f7;
-}
-
-#aboutheader2 {
-	background:  #382b30;
-	opacity: 0.8;
-	padding: 10px;
-}
-
-#aboutheader3 {
-	background:  #382b30;
-	opacity: 0.8;
-	padding: 10px;
-}
