--- a/style.css
+++ b/style.css
@@ -131,6 +131,8 @@
 	right: 5%;
 	top: 20%;
 	z-index: 1;
+	width: 333px;
+	height: 711px;
 
 }
 
@@ -157,3 +159,158 @@ h2, h3 {
 	opacity: 0.8;
 }
 
+#lastimg {
+	width: 100%;
+}
+
+.boogieman {
+	text-align: center;
+	border-radius: 25px;
+	border: 1px solid white;
+	background: black;
+	color: white;
+
+}
+
+
+@media screen and (max-width: 768px) {
+
+	#headerpic {
+	width: 100%;
+	height: 250px;
+}
+	
+	#navbar1 {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	margin-bottom: 20px;}
+
+
+	#heading {
+	position: absolute;
+	top: 150px;
+	left: 50px;
+	font-size: 40px; }
+
+
+	#topnavlink {
+	margin-right: 20px;
+	font-size: 15px; }
+
+
+	#navbar2 {
+	position: absolute;
+	top: 40px;
+	left: 20px;
+	padding: 25px;
+	width: 100%; }
+
+
+
+	#navlink {
+	padding: 25px;
+	font-size: 20px; }
+	
+
+	#text {
+	padding: 10px;
+	margin-right: 30%;
+	margin-left: 5%; }
+
+	#woman {
+	position: relative;
+	left: 15%;
+	width: 200px;
+	height: 450px;
+}
+
+
+	#text {
+	padding: 10px;
+	margin-right: 30%;
+	margin-left: 15%; }
+
+
+	h2, h3 {
+	margin-left: 15%;
+	margin-right: 30%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+
+	
+}
+
+@media screen and (max-width: 460px) {
+
+	#headerpic {
+	width: 100%;
+	height: 150px;
+}
+	
+	#navbar1 {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	margin-bottom: 15px;
+}
+
+
+	#heading {
+	position: absolute;
+	top: 90px;
+	left: 30px;
+	font-size: 30px; }
+
+	#topnavlink {
+	margin-right: 10px;
+	font-size: 9px; }
+
+
+	#navbar2 {
+	position: absolute;
+	top: 20px;
+	left: 10px;
+	padding: 15px;
+	width: 100%; }
+
+
+
+	#navlink {
+	padding: 15px;
+	font-size: 10px; }
+	
+
+	#text {
+	padding: 5px;
+	margin-right: 20%;
+	margin-left: 3%; }
+
+	#woman {
+	position: relative;
+	left: 3%;
+	width: 190px;
+	height: 450px;
+}
+
+
+
+	#text {
+	padding: 5px;
+	margin-right: 20%;
+	margin-left: 3%; }
+
+
+	h2, h3 {
+	margin-left: 3%;
+	margin-right: 20%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+
+
+	
+}
