--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@
 
 #mainpart {
 	background-image: url("background.png");
+	background-size: 100% 100%;
 	background-attachment: fixed;
 
 }
@@ -133,6 +134,7 @@
 	z-index: 1;
 	width: 333px;
 	height: 711px;
+	opacity: 0.7;
 
 }
 
@@ -169,8 +171,9 @@ h2, h3 {
 	border: 1px solid white;
 	background: black;
 	color: white;
-
 }
+
+
 
 
 @media screen and (max-width: 768px) {
@@ -184,19 +187,22 @@ h2, h3 {
 	position: absolute;
 	top: 10px;
 	right: 10px;
-	margin-bottom: 20px;}
+	margin-bottom: 20px;
+}
 
 
 	#heading {
 	position: absolute;
 	top: 150px;
 	left: 50px;
-	font-size: 40px; }
+	font-size: 40px; 
+}
 
 
 	#topnavlink {
 	margin-right: 20px;
-	font-size: 15px; }
+	font-size: 15px; 
+}
 
 
 	#navbar2 {
@@ -204,19 +210,22 @@ h2, h3 {
 	top: 40px;
 	left: 20px;
 	padding: 25px;
-	width: 100%; }
+	width: 100%; 
+}
 
 
 
 	#navlink {
 	padding: 25px;
-	font-size: 20px; }
+	font-size: 20px; 
+}
 	
 
 	#text {
 	padding: 10px;
 	margin-right: 30%;
-	margin-left: 5%; }
+	margin-left: 5%; 
+}
 
 	#woman {
 	position: relative;
@@ -229,7 +238,8 @@ h2, h3 {
 	#text {
 	padding: 10px;
 	margin-right: 30%;
-	margin-left: 15%; }
+	margin-left: 15%; 
+}
 
 
 	h2, h3 {
@@ -239,6 +249,7 @@ h2, h3 {
 	padding-bottom: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
+}
 
 	
 }
@@ -262,11 +273,13 @@ h2, h3 {
 	position: absolute;
 	top: 90px;
 	left: 30px;
-	font-size: 30px; }
+	font-size: 30px; 
+}
 
 	#topnavlink {
 	margin-right: 10px;
-	font-size: 9px; }
+	font-size: 9px; 
+}
 
 
 	#navbar2 {
@@ -274,19 +287,22 @@ h2, h3 {
 	top: 20px;
 	left: 10px;
 	padding: 15px;
-	width: 100%; }
+	width: 100%;
+}
 
 
 
 	#navlink {
 	padding: 15px;
-	font-size: 10px; }
+	font-size: 10px; 
+}
 	
 
 	#text {
 	padding: 5px;
 	margin-right: 20%;
-	margin-left: 3%; }
+	margin-left: 3%; 
+}
 
 	#woman {
 	position: relative;
@@ -300,7 +316,8 @@ h2, h3 {
 	#text {
 	padding: 5px;
 	margin-right: 20%;
-	margin-left: 3%; }
+	margin-left: 3%; 
+}
 
 
 	h2, h3 {
@@ -310,7 +327,7 @@ h2, h3 {
 	padding-bottom: 5px;
 	padding-left: 5px;
 	padding-right: 5px;
+}
 
 
-	
 }
