--- a/style.css
+++ b/style.css
@@ -1,446 +1,185 @@
-#headerpic {
-	width: 100%;
-	height: 500px;
-}
-
-#container {
-	position: relative;
-	
-}
-
-#navbar1 {
-	position: absolute;
-	top: 20px;
-	right: 20px;
-	font-family: "Asap Condensed"
-
-}
-
-#topnavlink {
-	text-decoration: none;
-	margin-right: 30px;
-	color: white;
-	text-decoration: underline;
-	font-size: 20px;
-
-}
-
-#topnavlink:hover {
-	text-decoration: none;
-	color: yellow;
-}
-
-#navbar2 {
-	position: absolute;
-	top: 70px;
-	left: 40px;
-	background: white;
-	padding: 50px;
-	width: 100%;
-	opacity: 0.6;
-	font-family: "Asap Condensed";
-
-	
-}
-
-#navlink {
-	background: white;
-	color: #54a6ff;
-	text-decoration: none;
-	padding: 50px;
-	font-size: 25px;
-	transition: 1s ease all;
-}
-
-#navlink:hover {
-	background: #54a6ff;
-	color: white;
-	transition: 1s ease all;
-}
-
-#navlink2 {
-	color: #9320db;
-	background: white;
-	text-decoration: none;
-	padding: 50px;
-	font-size: 25px;
-}
-
-#navlink2:hover {
-	background: #9320db;
-	color: white;
-	transition: 1s ease all;
-}
-
-#navlink3 {
-	color: #7a3742;
-	background: white;
-	text-decoration: none;
-	padding: 50px;
-	font-size: 25px;
-}
-
-#navlink3:hover {
-	background: #7a3742;
-	color: white;
-	transition: 1s ease all;
-
-
-}
-
-#navlink4 {
-	color: #b7662c;
-	background: white;
-	text-decoration: none;
-	padding: 50px;
-	font-size: 25px;
-}
-
-#navlink4:hover {
-	background: #b7662c;
-	color: white;
-	transition: 1s ease all;
-
-
-}
-
-#heading {
-	position: absolute;
-	top: 250px;
-	left: 100px;
-	font-size: 80px;
-	font-family: "Indie Flower";
-	color: white;
-	opacity: 0.7;
-}
-
-/* FIRST BLOCKs END */
-
-#mainpart {
-	background-image: url("background.png");
-	background-size: 100% 100%;
-	background-attachment: fixed;
-
-}
-
-#textpart {
-	position: relative;
-}
-
-#woman {
-	position: absolute;
-	right: 5%;
-	top: 20%;
-	z-index: 1;
-	width: 333px;
-	height: 711px;
-	opacity: 0.7;
-
-}
-
-#text {
-	padding: 20px;
-	margin-right: 30%;
-	margin-left: 10%;
-	font-family: "Asap Condensed";
-	
-}
-
-h2, h3 {
-	margin-left: 25%;
-	margin-right: 40%;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-	font-family: "Asap Condensed";
-	color: white;
-	background: #54a6ff;
-	display: inline-block;
-	border-radius: 25px;
-	opacity: 0.8;
-}
-
-#lastimg {
-	width: 100%;
-}
-
-.boogieman {
-	text-align: center;
-	border-radius: 25px;
-	border: 1px solid white;
-	background: black;
-	color: white;
-}
-
-#loginsite {
-	background: url("loginbackground.png");
-}
-
-
-
-
-
-
-
-
-#label {
-	font-family: "Asap Condensed";
-	font-size: 24px;
-}
-
-
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 25px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 25px;
-    box-sizing: border-box;
-    text-align: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    font-size: 20px;
-    font-family: "Asap Condensed";
-    opacity: 0.8;
-}
-
-/* Set a style for all buttons */
-button {
-    background-color: #bc8612;
-    color: white;
-    padding: 20px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    text-align: center;
-    opacity: 0.7;
-    font-size: 20px;
-    border: 1px solid black;
-    border-radius: 25px;
-}
-
-button:hover {
-	color: white;
-	background: black;
-	transition: 1s ease all;
-	opacity: 0.9;
-	border: 2px solid black;
-
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-    padding: 20px 20px;
-    background-color: #d8c69e;
-    color: black;
-    border: 1px solid black;
-    border-radius: 25px;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn,.signupbtn {
-    float: left;
-    width: 50%;
-}
-
-/* Add padding to container elements */
 .container {
-    padding: 16px;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-        width: 100%;
-    }
+	background-image: url("background.png");
+	background-attachment: fixed;
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsivity */
-
-
-@media screen and (max-width: 768px) {
-
-	#headerpic {
-	width: 100%;
-	height: 250px;
+#header {
+	background-image: url("header.png");
+	background-size: 100% 500px;
+	width: 99.8%;
+	height: 500px;
+	box-shadow: 3px 3px grey;
 }
-	
-	#navbar1 {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	margin-bottom: 20px;
+
+#header2 {
+	background-image: url("header2.png");
+	background-size: 100% 500px;
+	width: 99.8%;
+	height: 500px;
+	box-shadow: 3px 3px grey;
+
 }
 
 
-	#heading {
-	position: absolute;
-	top: 150px;
-	left: 50px;
-	font-size: 40px; 
+#header3 {
+	background-image: url("header3.png");
+	background-size: 100% 500px;
+	width: 99.8%;
+	height: 500px;
+	box-shadow: 3px 3px grey;
 }
 
 
-	#topnavlink {
-	margin-right: 20px;
-	font-size: 15px; 
+#header4 {
+	background-image: url("header4.png");
+	background-size: 100% 500px;
+	width: 99.8%;
+	height: 500px;
+	box-shadow: 3px 3px grey;
 }
 
 
-	#navbar2 {
-	position: absolute;
-	top: 40px;
-	left: 20px;
-	padding: 25px;
-	width: 100%; 
-}
-
-
-
-	#navlink {
-	padding: 25px;
-	font-size: 20px; 
-}
-	
-
-	#text {
-	padding: 10px;
-	margin-right: 30%;
-	margin-left: 5%; 
-}
-
-	#woman {
-	position: relative;
-	left: 15%;
-	width: 200px;
-	height: 450px;
-}
-
-
-	#text {
-	padding: 10px;
-	margin-right: 30%;
-	margin-left: 15%; 
-}
-
-
-	h2, h3 {
-	margin-left: 15%;
-	margin-right: 30%;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
+#firstnavbar ul {
+	display: inline;
+	float: right;
+	list-style-type: none;
+	padding: 20px;
+	width: 90%;
+	text-align: right;
 	
 }
 
-@media screen and (max-width: 460px) {
-
-	#headerpic {
-	width: 100%;
-	height: 150px;
-}
-	
-	#navbar1 {
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	margin-bottom: 15px;
+#firstnavbar li {
+	font-size: 20px;
+	display: inline;
 }
 
-
-	#heading {
-	position: absolute;
-	top: 90px;
-	left: 30px;
-	font-size: 30px; 
-}
-
-	#topnavlink {
+#firstnavbar li a {
+	text-decoration: none;
+	color: white;
 	margin-right: 10px;
-	font-size: 9px; 
+	margin-left: 10px;
+	padding: 3px 5px;
+	border-right: 3px solid white;
 }
 
-
-	#navbar2 {
-	position: absolute;
-	top: 20px;
-	left: 10px;
-	padding: 15px;
-	width: 100%;
+#firstnavbar a:hover {
+	color: gold;
+	border-bottom: 3px solid white;
+	
 }
 
-
-
-	#navlink {
-	padding: 15px;
-	font-size: 10px; 
-}
+#secondnavbar ul {
+	display: inline-block;
+	float: left;
+	list-style-type: none;
+	width: 90%;
+	margin-bottom: 70px;
+	
 	
 
-	#text {
-	padding: 5px;
-	margin-right: 20%;
-	margin-left: 3%; 
 }
 
-	#woman {
-	position: relative;
-	left: 3%;
-	width: 190px;
-	height: 450px;
+#secondnavbar li {
+	font-size: 30px;
+	font-family: "Asap Condensed";
+	display: inline-block;
+	background: white;
+	opacity: 0.8;
+	
+	
+
+
+}
+
+#secondnavbar li a {
+	text-decoration: none;
+	color: black;
+	text-align: center;	
+	display: inline-block;
+	padding: 50px 80px;
+	
+	
+
+}
+
+#secondnavbar a:hover {
+	background: #4286f4;
+	color: white;
+	display: inline-block;
+	transition: 0.7s ease all;
+	border-bottom: 5px solid white;
+	
+}
+
+#header h1, #header2 h1, #header3 h1, #header4 h1 {
+	display: inline-block;
+	font-size: 120px;
+	margin: 40px auto;
+	width: 80%;
+	padding-left: 50px;
+	font-family: "indie flower";
+	color: white;
+	opacity: 0.8;
+
+
+}
+
+#header2 #secondnavbar a:hover {
+
+	background: #123875;
+	color: white;
+	display: inline-block;
+	transition: 0.7s ease all;
+	border-bottom: 5px solid white;
+}
+
+#header3 #secondnavbar a:hover {
+
+	background: #842e56;
+	color: white;
+	display: inline-block;
+	transition: 0.7s ease all;
+	border-bottom: 5px solid white;
+}
+
+#header4 #secondnavbar a:hover {
+
+	background: #631d7c;
+	color: white;
+	display: inline-block;
+	transition: 0.7s ease all;
+	border-bottom: 5px solid white;
 }
 
 
-
-	#text {
-	padding: 5px;
-	margin-right: 20%;
-	margin-left: 3%; 
+#main {
+	width: 60%;
+	border: 3px solid black;
+	margin-top: 150px;
+	display: inline-block;
+	margin-right: 30px;
+	margin-left: 30px;
+	margin-bottom: 50px;
 }
 
-
-	h2, h3 {
-	margin-left: 3%;
-	margin-right: 20%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding-left: 5px;
-	padding-right: 5px;
+#sideimg {
+	float: right;
+	border: 3px solid black;
+	margin-top: 150px;
+	margin-left: 30px;
+	margin-right: 50px;
+	margin-bottom: 50px;
 }
 
+#botimg {
+	width: 100%;
+	height: auto;
+}
+
+#boogiemanz {
+	text-align: right;
 
 }
