--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@
 	background-size: 100% 500px;
 	background-repeat: no-repeat;
 	width: 99.8%;
-	box-shadow: 3px 3px black;
 	height: 500px;
-	opacity: 0.9;
+	
 }
 
 #header2 {
@@ -24,7 +23,7 @@
 	background-size: 100% 500px;
 	width: 99.8%;
 	height: 500px;
-	box-shadow: 3px 3px grey;
+	
 
 }
 
@@ -34,7 +33,7 @@
 	background-size: 100% 500px;
 	width: 99.8%;
 	height: 500px;
-	box-shadow: 3px 3px grey;
+	
 }
 
 
@@ -43,7 +42,7 @@
 	background-size: 100% 500px;
 	width: 99.8%;
 	height: 500px;
-	box-shadow: 3px 3px grey;
+	
 }
 
 
@@ -382,17 +381,18 @@
 		}
 
 		#header, #header2, #header3, #header4 {
-			background-size: 100% 200px;
+			background-size: 100% 130px;
 			background-repeat: no-repeat;
-			height: 400px;
-			background-color: black;
-			opacity: 0.8;
+			height: auto;
+			background-color: rgba(106, 119, 140, 0.8);
+
+			
 
 		}
 
 		#firstnavbar ul {
 			display: inline-block;
-			margin: 0;
+			margin: 30px;
 			padding: 0;
 		}
 
@@ -402,20 +402,40 @@
 			margin: 0;
 			padding: 0;
 			width: 100%;
+			opacity: 0.9;	
+
+
 		}
 
 		#secondnavbar li {
 			width: 100%;
 			text-align: center;
+			background: #c9d2e2;
+			
+
 		}
 
 		#secondnavbar li a {
-			padding: 5px;
+			padding: 5px 30px;
+			font-size: 20px;
+			margin-bottom: 2px;
+			
 
+		}
+
+		#secondnavbar a:hover {
+			border-bottom: 1px solid white;
+			
 		}
 
 		#header h1, #header2 h1, #header3 h1, #header4 h1 {
 			font-size: 40px;
+			display: inline-block;
+			opacity: 0.9;
+			margin: auto;
+			padding: 40px;
+			text-align: center;
+
 		}
 
 
@@ -453,3 +473,5 @@
 		}
 }
 	
+
+
